<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2022 The LineageOS Project
     SPDX-FileCopyrightText: 2026 BMobile contributors
     SPDX-License-Identifier: Apache-2.0
-->
<com.google.android.setupdesign.GlifLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setup_wizard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/SudContentFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/base_margin_top"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/page"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:fillViewport="true"
                android:paddingBottom="@dimen/setup_card_margin_bottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/setup_card_margin_horizontal"
                    android:layout_marginTop="@dimen/setup_card_margin_top"
                    android:layout_marginEnd="@dimen/setup_card_margin_horizontal"
                    android:background="@drawable/setup_onboarding_card_bg"
                    android:orientation="vertical"
                    android:padding="@dimen/setup_card_padding">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/navigation_illustration"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/lottie_system_nav_fully_gestural" />

                    <RadioGroup
                        android:id="@+id/navigation_radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/setup_option_spacing"
                        android:background="@drawable/setup_onboarding_option_bg"
                        android:paddingStart="@dimen/setup_option_padding_horizontal"
                        android:paddingTop="@dimen/setup_option_padding_vertical"
                        android:paddingEnd="@dimen/setup_option_padding_horizontal"
                        android:paddingBottom="@dimen/setup_option_padding_vertical">

                        <RadioButton
                            android:id="@+id/radio_gesture"
                            style="@style/SudRadioButton"
                            android:checked="true"
                            android:text="@string/gesture_navigation" />

                        <RadioButton
                            android:id="@+id/radio_sw_keys"
                            style="@style/SudRadioButton"
                            android:text="@string/navbar_navigation" />
                    </RadioGroup>

                    <CheckBox
                        android:id="@+id/hide_navigation_hint"
                        style="@style/SudCheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/setup_option_spacing"
                        android:background="@drawable/setup_onboarding_option_bg"
                        android:paddingStart="@dimen/setup_option_padding_horizontal"
                        android:paddingTop="@dimen/setup_option_padding_vertical"
                        android:paddingEnd="@dimen/setup_option_padding_horizontal"
                        android:paddingBottom="@dimen/setup_option_padding_vertical"
                        android:text="@string/hide_gesture_hint" />

                </LinearLayout>
            </ScrollView>
        </FrameLayout>

        <org.lineageos.setupwizard.NavigationLayout
            android:id="@+id/navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</com.google.android.setupdesign.GlifLayout>
