<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2015 The CyanogenMod Project
     SPDX-FileCopyrightText: 2017-2024 The LineageOS Project
     SPDX-FileCopyrightText: 2026 BMobile contributors
     SPDX-License-Identifier: Apache-2.0
-->
<com.google.android.setupdesign.GlifLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setup_wizard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/SudContentFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/base_margin_top"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/page"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:fillViewport="true"
                android:paddingBottom="@dimen/setup_card_margin_bottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/setup_card_margin_horizontal"
                    android:layout_marginTop="@dimen/setup_card_margin_top"
                    android:layout_marginEnd="@dimen/setup_card_margin_horizontal"
                    android:background="@drawable/setup_onboarding_card_bg"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/setup_card_padding">

                    <FrameLayout
                        android:layout_width="@dimen/setup_hero_size"
                        android:layout_height="@dimen/setup_hero_size"
                        android:background="@drawable/setup_onboarding_hero_circle">

                        <ImageView
                            android:id="@+id/services_hero_icon"
                            android:layout_width="@dimen/setup_hero_icon_size"
                            android:layout_height="@dimen/setup_hero_icon_size"
                            android:layout_gravity="center"
                            android:importantForAccessibility="no"
                            android:src="@drawable/ic_features" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/services_card_summary"
                        style="@style/SetupOnboardingCardBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/setup_card_section_spacing"
                        android:gravity="center"
                        android:text="@string/setup_services_summary" />

                    <TextView
                        style="@style/SetupOnboardingOptionText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/setup_option_spacing"
                        android:text="@string/setup_features_optional_header"
                        android:textStyle="bold" />

                    <include
                        android:id="@+id/setup_feature_microg"
                        layout="@layout/setup_feature_option"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/setup_option_spacing" />

                    <include
                        android:id="@+id/setup_feature_dav"
                        layout="@layout/setup_feature_option"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/setup_option_spacing" />

                    <include
                        android:id="@+id/setup_feature_monet"
                        layout="@layout/setup_feature_option"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/setup_option_spacing" />

                    <LinearLayout
                        android:id="@+id/nav_keys"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/setup_option_spacing"
                        android:background="@drawable/setup_onboarding_option_bg"
                        android:clickable="true"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/setup_option_padding_horizontal"
                        android:paddingTop="@dimen/setup_option_padding_vertical"
                        android:paddingEnd="@dimen/setup_option_padding_horizontal"
                        android:paddingBottom="@dimen/setup_option_padding_vertical">

                        <CheckBox
                            android:id="@+id/nav_keys_checkbox"
                            style="@style/SudCheckBox.Multiline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:clickable="false"
                            android:duplicateParentState="true" />

                        <TextView
                            android:id="@+id/nav_keys_summary"
                            style="@style/SetupOnboardingOptionText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/location_text_margin_left"
                            android:layout_weight="1"
                            android:text="@string/services_os_nav_keys_label" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </FrameLayout>

        <org.lineageos.setupwizard.NavigationLayout
            android:id="@+id/navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</com.google.android.setupdesign.GlifLayout>
